--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ repositories {
     }
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     /*compile project(':appcompat_v7')*/
     compile files('libs/xUtils-2.6.14.jar')
     compile files('libs/nineoldandroids-2.4.0.jar')
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile files('libs/commons-codec-1.9.jar')
     compile files('libs/umeng-update-v2.6.0.1.jar')
+    compile files('libs/locSDK_6.03.jar')
 }
