--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile files('libs/commons-codec-1.9.jar')
     compile files('libs/umeng-update-v2.6.0.1.jar')
     compile files('libs/locSDK_6.03.jar')
+    compile files('libs/mta-sdk-1.6.2.jar')
+    compile files('libs/open_sdk_r5276.jar')
 }
