--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     compile files('libs/locSDK_6.03.jar')
     compile files('libs/mta-sdk-1.6.2.jar')
     compile files('libs/open_sdk_r5276.jar')
+    compile project(':WeiboSDK')
+    compile files('libs/libammsdk.jar')
 }
